--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                         <input type="password" id="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5" placeholder="••••••••">
                     </div>
                 </div>
-                <a href="home.html" class="w-full">
-                <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center transition duration-300">Entrar</button>
+               <a href="URL_DA_SUA_PAGINA.html" class="w-full">
+                <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center transition duration-300">
+                Entrar</button>
                 </a>
                 <div class="text-sm text-center mt-6">
                     <a href="#" class="font-medium text-blue-600 hover:underline">Esqueceu a senha?</a>
