--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                <a href="home.html" class="w-full">
-                <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center transition duration-300">Entrar</button>
+                <button type="button" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center transition duration-300">Entrar</button>
                 </a>
                 <div class="text-sm text-center mt-6">
                     <a href="#" class="font-medium text-blue-600 hover:underline">Esqueceu a senha?</a>
