--- a/home.html
+++ b/home.html
@@ -95,3 +95,55 @@
         </div>
     </a>
 </div>
+            </div>
+            </main>
+</div>
+<script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Lógica para o dropdown de idiomas
+            const langButton = document.getElementById('lang-button');
+            const langDropdown = document.getElementById('lang-dropdown');
+            
+            langButton.addEventListener('click', function() {
+                langDropdown.classList.toggle('hidden');
+            });
+
+            // Fechar dropdown se clicar fora
+            document.addEventListener('click', function(event) {
+                if (!langButton.contains(event.target)) {
+                    langDropdown.classList.add('hidden');
+                }
+            });
+
+            // Lógica para trocar o idioma (simulação)
+            const langLinks = langDropdown.querySelectorAll('a');
+            const currentLangSpan = document.getElementById('current-lang');
+            langLinks.forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const selectedLang = e.target.getAttribute('data-lang');
+                    currentLangSpan.textContent = selectedLang;
+                    langDropdown.classList.add('hidden');
+                    // Aqui você adicionaria a lógica para traduzir o conteúdo da página
+                    console.log(Idioma alterado para: ${selectedLang});
+                });
+            });
+
+            // --- Lógica de Detecção Automática de Idioma (Conceitual) ---
+            // Em um aplicativo real, a lógica de tradução seria mais complexa.
+            // O código abaixo detecta o idioma do navegador do usuário como ponto de partida.
+            const userLang = navigator.language || navigator.userLanguage; 
+            console.log("Idioma detectado do navegador:", userLang);
+
+            if (userLang.startsWith('en')) {
+                currentLangSpan.textContent = 'English';
+                // Função para traduzir para inglês
+            } else if (userLang.startsWith('es')) {
+                currentLangSpan.textContent = 'Español';
+                // Função para traduzir para espanhol
+            }
+            // O padrão é Português, já definido no HTML.
+        });
+    </script>
+    </body>
+</html>
