--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                     <p class="text-sm text-gray-500 mt-1">Transporte com segurança</p>
                 </a>
 
-                <a href="#" class="bg-lime-200 p-6 rounded-2xl shadow-md flex flex-col items-center justify-center text-center transition duration-300 card-hover"> <div class="bg-lime-300 rounded-full h-16 w-16 flex items-center justify-center mb-4"> <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" /></svg>
+                <a href="lugares.html" class="bg-lime-200 p-6 rounded-2xl shadow-md flex flex-col items-center justify-center text-center transition duration-300 card-hover"> <div class="bg-lime-300 rounded-full h-16 w-16 flex items-center justify-center mb-4"> <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" /></svg>
                     </div>
                     <h3 class="font-bold text-lg text-gray-800">Lugares</h3>
                     <p class="text-sm text-gray-500 mt-1">Explore pontos turísticos</p>
