--- a/home.html
+++ b/home.html
@@ -77,8 +77,8 @@
     <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-blue-500 hover:shadow-sm">
         <img src="https://placehold.co/40x40/000000/FFFFFF?text=U" alt="Uber Logo" class="rounded-full">
         <div>
-            <p class="font-semibold text-gray-800">Uber</p>
-            <p class="text-xs text-gray-500">Solicite uma viagem</p>
+          <a href"https://www.uber.com/br/pt-br/?_pec=no> <p class="font-semibold text-gray-800">Uber</p>
+            <p class="text-xs text-gray-500">Solicite uma viagem</p></a>
         </div>
     </a>
     <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-500 hover:shadow-sm">
