--- a/home.html
+++ b/home.html
@@ -74,11 +74,11 @@
             <div>
                <h3 class="text-xl font-bold text-gray-800 mb-4">Serviços Parceiros</h3>
 <div class="flex flex-col md:flex-row gap-4">
-    <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-blue-500 hover:shadow-sm">
+    <a href="https://www.uber.com/br/pt-br/?_pec=no" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-blue-500 hover:shadow-sm">
         <img src="https://placehold.co/40x40/000000/FFFFFF?text=U" alt="Uber Logo" class="rounded-full">
         <div>
-          <a href"https://www.uber.com/br/pt-br/?_pec=no> <p class="font-semibold text-gray-800">Uber</p>
-            <p class="text-xs text-gray-500">Solicite uma viagem</p></a>
+         <p class="font-semibold text-gray-800">Uber</p>
+            <p class="text-xs text-gray-500">Solicite uma viagem</p>
         </div>
     </a>
     <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-500 hover:shadow-sm">
