--- a/home.html
+++ b/home.html
@@ -81,14 +81,14 @@
             <p class="text-xs text-gray-500">Solicite uma viagem</p>
         </div>
     </a>
-    <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-500 hover:shadow-sm">
+    <a href="https://www.airbnb.com.br/" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-500 hover:shadow-sm">
         <img src="https://placehold.co/40x40/FF5A5F/FFFFFF?text=A" alt="Airbnb Logo" class="rounded-full">
         <div>
             <p class="font-semibold text-gray-800">Airbnb</p>
             <p class="text-xs text-gray-500">Encontre hospedagem</p>
         </div>
     </a>
-    <a href="#" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-600 hover:shadow-sm">
+    <a href="https://www.ifood.com.br/" class="flex-1 bg-white p-4 rounded-xl border border-gray-200 flex items-center space-x-4 transition duration-300 hover:border-red-600 hover:shadow-sm">
         <img src="https://placehold.co/40x40/EA1D2C/FFFFFF?text=I" alt="iFood Logo" class="rounded-full">
         <div>
             <p class="font-semibold text-gray-800">iFood</p>
