--- a/eventos.html
+++ b/eventos.html
@@ -37,7 +37,7 @@
         
         <!-- Cabeçalho -->
         <header class="flex justify-between items-center mb-8">
-            <a href="index.html" class="text-gray-600 hover:text-blue-500 flex items-center">
+            <a href="home.html" class="text-gray-600 hover:text-blue-500 flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
                 <span class="font-medium" data-translate-key="back">Voltar</span>
             </a>
